test_data/data_validation_tests_data/invalid_currency_codes_test_data/bank_export_invalid_currency_chars_new.xlsx
version https://git-lfs.github.com/spec/v1
oid sha256:cd5557ac73a7a040a638041e0cc31ac1eaf311e055878c75587828d43d40fa76
size 5543
